[package]
name = "shogai"
version = "0.1.0"
authors = ["Lucas Micheloni <lucas.michelonidesouza@gmail.com>","Michael Bleuez michaek.bleuez2@gmail.com"]
edition = "2018"

[dependencies]
shogai="*"


[dependencies.sdl2]
version = "0.32.0"
default-features = false
features = ["image"]

[features]
default = []
portable = []
